fix: plural syntax for price label; scrollbar styling

--- a/src/components/CartTooltip/CartTooltip.module.scss
+++ b/src/components/CartTooltip/CartTooltip.module.scss
@@ -51,12 +51,16 @@
 }
 
 .cards::-webkit-scrollbar {
-  width: 6px;
+  width: 8px;
+}
+
+.cards::-webkit-scrollbar-track {
+  background: transparent; 
 }
 
 .cards::-webkit-scrollbar-thumb {
-  background-color: #d1d1d1;
-  border-radius: 3px;
+  background-color: #fff;
+  border-radius: 5px;
 
   &:hover {
     background-color: #a8a8a8;
